Fix content header on small devices

--- a/theme/layout.phone.less
+++ b/theme/layout.phone.less
@@ -6,17 +6,7 @@
 
 		#content-wrapper {
 			padding: 20px 20px @footer_height 20px;
-		}
-
-		h1 {
-			display: block;
-			margin: -20px -20px 40px -20px;
-			font-weight: lighter;
-			letter-spacing: -1px;
-			line-height: 60px;
-			padding: 0 20px;
-			border-bottom: 1px solid @content_border_color;
-		}		
+		}			
 	}
 
 	#sidebar {
